--- a/Pages/Pedido.xaml
+++ b/Pages/Pedido.xaml
@@ -11,42 +11,75 @@
              Title="Pedido">
 
     <ScrollView>
-    
-    <VerticalStackLayout Padding="10,10,10,10">
-        <!-- Definimos el padding del HorizontalStackLayou-->
 
-        <VerticalStackLayout HorizontalOptions="StartAndExpand">
+        <VerticalStackLayout Padding="10,10,10,10">
+            
+            <Grid RowSpacing="20" ColumnSpacing="20">
 
-            <HorizontalStackLayout>
+                <Grid.RowDefinitions>
 
-                <Label FontSize="40" VerticalOptions="Center" FontAttributes="Bold" Text="Pedido"/>
+                    <RowDefinition/>
 
-            </HorizontalStackLayout>
+                    <RowDefinition/>
 
-        </VerticalStackLayout>
+                    <RowDefinition/>
 
-        <VerticalStackLayout HorizontalOptions="CenterAndExpand" Padding="10,50,10,50">
+                    <RowDefinition/>
 
-           
+                    <RowDefinition/>
 
-            <Label FontSize="20" FontAttributes="Bold" Text="Estado actual de la orden" />
+                    <RowDefinition/>
 
-        </VerticalStackLayout>
+                    <RowDefinition/>
 
+                    <RowDefinition/>
 
-        <HorizontalStackLayout HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand">
-            <VerticalStackLayout VerticalOptions="CenterAndExpand" HorizontalOptions="CenterAndExpand">
+                    <RowDefinition/>
+
+                    <RowDefinition/>
+
+                    <RowDefinition/>
+
+                    <RowDefinition/>
+
+                    <RowDefinition/>
+
+                    <RowDefinition/>
+
+                </Grid.RowDefinitions>
+
+                <Grid.ColumnDefinitions>
+
+                    <ColumnDefinition/>
+
+                    <ColumnDefinition/>
+
+                    <ColumnDefinition/>
+
+                    <ColumnDefinition/>
+
+                </Grid.ColumnDefinitions>
+
+                <Label Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="4" FontSize="40" FontAttributes="Bold" Text="Pedido"/>
+
+                <Label Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="4" HorizontalOptions="Center" FontSize="20" FontAttributes="Bold" Text="Estado actual de la orden"/>
+
+            </Grid>
+
+                
+
+                
           
-                            <Grid VerticalOptions="CenterAndExpand" WidthRequest="400" HeightRequest="195" HorizontalOptions="CenterAndExpand">
+                            <Grid HorizontalOptions="Center">
                                 <Grid.RowDefinitions>
                                     <RowDefinition Height="Auto"/>
                                     <RowDefinition Height="Auto"/>
                                 </Grid.RowDefinitions>
-                <ListView ItemsSource="{Binding ListProducts}" HeightRequest="400" 
-                          HorizontalOptions="CenterAndExpand" SeparatorVisibility="Default"
-                                  Grid.Row="1">
+                <ListView ItemsSource="{Binding ListProducts}"
+                         SeparatorVisibility="Default"
+                                  Grid.Row="1" HorizontalOptions="Center">
                                     <ListView.Header>
-                        <Grid HorizontalOptions="CenterAndExpand" ColumnSpacing="5" VerticalOptions="CenterAndExpand">
+                        <Grid HorizontalOptions="Center">
                                             <Grid.ColumnDefinitions>
                                                
 
@@ -55,104 +88,72 @@
                                                 <ColumnDefinition Width="70"/>
                                                 <ColumnDefinition Width="70"/>
 
-                                            </Grid.ColumnDefinitions>
-                                    <Label FontSize="10" Text="PLATILLOS"    VerticalOptions="Center" FontAttributes="Bold"  Grid.Column="0"/>
-                                    <Label FontSize="10" Text="BEBIDAS"     FontAttributes="Bold"   VerticalOptions="Center" Grid.Column="1"/>
-                                    <Label FontSize="10" Text="POSTRES"    FontAttributes="Bold"   VerticalOptions="Center" Grid.Column="2"/>
-                                    <Label FontSize="10" Text="BOCADILLOS"  FontAttributes="Bold"  VerticalOptions="Center" Grid.Column="3"/>
+                            </Grid.ColumnDefinitions>
+                                    <Label FontSize="11" Text="PLATILLOS"    VerticalOptions="Center" FontAttributes="Bold"  Grid.Column="0"/>
+                                    <Label FontSize="11" Text="BEBIDAS"     FontAttributes="Bold"   VerticalOptions="Center" Grid.Column="1"/>
+                                    <Label FontSize="11" Text="POSTRES"    FontAttributes="Bold"   VerticalOptions="Center" Grid.Column="2"/>
+                                    <Label FontSize="11" Text="BOCADILLOS"  FontAttributes="Bold"  VerticalOptions="Center" Grid.Column="3"/>
                                         </Grid>
                                     </ListView.Header>
                                     <ListView.ItemTemplate>
                                         <DataTemplate>
                                             <ViewCell>
-                                <Grid ColumnSpacing="5" VerticalOptions="CenterAndExpand" HorizontalOptions="CenterAndExpand">
-                                                    <Grid.RowDefinitions>
+                                <Grid HorizontalOptions="Center">
+                                    <Grid.RowDefinitions HorizontalOptions="Center">
                                         <RowDefinition Height="auto"/>
                                                     </Grid.RowDefinitions>
                                                     <Grid.ColumnDefinitions>
-                                                        <ColumnDefinition Width="70"/>
                                                          <ColumnDefinition Width="70"/>
-                                                        <ColumnDefinition Width="70"/>
+                                                         <ColumnDefinition Width="70"/>
+                                                         <ColumnDefinition Width="70"/>
                                                          <ColumnDefinition Width="70"/>
                                                     </Grid.ColumnDefinitions>
-                                            <Label FontSize="10" Text="{Binding Platillos}"                 Grid.Column="0"/>
-                                                    <Label FontSize="10" Text="{Binding Bebidas}"    Grid.Column="1"/>
-                                            <Label FontSize="10" Text="{Binding Postres}"    Grid.Column="2"/>
-                                            <Label FontSize="10" Text="{Binding Bocadillos}" Grid.Column="3"/>
+                                            <Label FontSize="11"  Text="{Binding Platillos}"  Grid.Column="0"/>
+                                            <Label FontSize="11"  Text="{Binding Bebidas}"    Grid.Column="1"/>
+                                            <Label FontSize="11"  Text="{Binding Postres}"    Grid.Column="2"/>
+                                            <Label FontSize="11"  Text="{Binding Bocadillos}" Grid.Column="3"/>
                                                 </Grid>
                                             </ViewCell>
                                         </DataTemplate>
                                     </ListView.ItemTemplate>
                                 </ListView>
-
                             </Grid>
-    </VerticalStackLayout>
-    </HorizontalStackLayout>
 
+           
+            <VerticalStackLayout>
 
-        <VerticalStackLayout>
+            <HorizontalStackLayout HorizontalOptions="CenterAndExpand" Margin="0,40,0,10">
 
-            <HorizontalStackLayout HorizontalOptions="CenterAndExpand" Margin="0,40,0,0">
-
-                <Button FontFamily="raleway-boldf" x:Name="Mas"      Margin="0,0,0,0" Text="+" HeightRequest="40" WidthRequest="40" CornerRadius="60" FontAttributes="Bold"/>
-
-                <Label Margin="10,0,10,0" HorizontalOptions="Center" VerticalOptions="Center" Text="0" FontAttributes="Bold"/>
-
-                <Button FontFamily="raleway-boldf" x:Name="Menos"      Margin="0,0,10,0" Text="-" HeightRequest="40" WidthRequest="40" CornerRadius="60" FontAttributes="Bold"/>
+                    <Button x:Name="Mas"   Padding="5,5,5,5" HorizontalOptions="Start" VerticalOptions="Center" Text="+" HeightRequest="40" WidthRequest="40" CornerRadius="60" FontAttributes="Bold"/>
+                                                   
+                    <Label                 Padding="5,5,5,5" HorizontalOptions="Center" VerticalOptions="Center" Text="0" FontAttributes="Bold"/>
+                                                
+                    <Button x:Name="Menos" Padding="5,5,5,5" HorizontalOptions="End" VerticalOptions="Center" Text="-" HeightRequest="40" WidthRequest="40" CornerRadius="60" FontAttributes="Bold"/>
 
 
             </HorizontalStackLayout>
 
         </VerticalStackLayout>
 
-        
-        <VerticalStackLayout HorizontalOptions="CenterAndExpand" Padding="10,50,10,50">
+                    <Label  HorizontalOptions="CenterAndExpand" Padding="10,10,10,10" FontSize="20" FontAttributes="Bold" Text="Rellene los campos" />
 
-            <HorizontalStackLayout>
-            <!-- Agregamos un label y definimos su color,fuente,tamaño,sus atributos, y su propiedad text -->
-
-            <Label  FontSize="20" FontAttributes="Bold" Text="Rellene los campos" />
-
-
-            </HorizontalStackLayout>
-        </VerticalStackLayout>
-
-        <VerticalStackLayout HorizontalOptions="CenterAndExpand" Padding="10,10,10,10" VerticalOptions="CenterAndExpand">
-
-            <HorizontalStackLayout>
-                <!-- Agregamos un label y definimos su color,fuente,tamaño,sus atributos, y su propiedad text -->
+            <HorizontalStackLayout HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand">
+              
 
                 <Label HorizontalTextAlignment="Start" FontSize="15" FontAttributes="Bold" Margin="0,0,50,0" Text="Nombre:"  VerticalOptions="CenterAndExpand"/>
                 <Entry Placeholder="Digite su nombre"  Margin="0,0,10,10"  x:Name="NombreCli" VerticalOptions="CenterAndExpand" HorizontalOptions="EndAndExpand" WidthRequest="200" HeightRequest="35"/>
 
-             
             </HorizontalStackLayout>
-        </VerticalStackLayout>
-        <VerticalStackLayout HorizontalOptions="CenterAndExpand" Padding="10,10,10,10" VerticalOptions="CenterAndExpand">
 
-            <HorizontalStackLayout>
-                <!-- Agregamos un label y definimos su color,fuente,tamaño,sus atributos, y su propiedad text -->
-
-
-                <Label  HorizontalTextAlignment="Start" VerticalOptions="CenterAndExpand" FontSize="15" FontAttributes="Bold" Text="N° de tarjeta:"  />
+            <HorizontalStackLayout HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand">
+   
+                <Label  HorizontalTextAlignment="Start" VerticalOptions="CenterAndExpand" FontAttributes="Bold" Text="N° de tarjeta:"/>
                 <Entry  HorizontalOptions="EndAndExpand" Margin="20,10,10,10"  Keyboard="Numeric" Placeholder="Tarjeta de credito" x:Name="Tarjeta" VerticalOptions="CenterAndExpand"  WidthRequest="200" HeightRequest="35" />
 
-
-            </HorizontalStackLayout>
-        </VerticalStackLayout>
-
-        <VerticalStackLayout>
-
-            <HorizontalStackLayout HorizontalOptions="CenterAndExpand" Margin="0,40,0,0">
-
-                <Button x:Name="pedido" Margin="10,10,10,10" Text="REALIZAR ORDEN" FontAttributes="Bold" HeightRequest="45" WidthRequest="190" CornerRadius="30"/>
-
             </HorizontalStackLayout>
 
+            <Button HorizontalOptions="CenterAndExpand" Margin="0,10,0,0" x:Name="pedido" Text="Realizar orden" FontAttributes="Bold" HeightRequest="50" WidthRequest="150" CornerRadius="30"/>
         </VerticalStackLayout>
-
-
-    </VerticalStackLayout>
 
     </ScrollView>
     
